--- a/BridgeCardTest/BridgeCardTest.csproj
+++ b/BridgeCardTest/BridgeCardTest.csproj
@@ -8,4 +8,9 @@
       <ProjectReference Include="..\BridgeCard\BridgeCard.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="xunit" Version="2.4.1" />
+      <PackageReference Include="xunit.runner.visualstudio" Version="2.4.1" />
+    </ItemGroup>
+
 </Project>
